MIR-842 fix layout issues caused by bootsrap 4 migration
* removes outdated class and fixes side effects
* bs 4 modal dialog migration
* bs 4 menu divider migration
* fixes layout issue in related item editor
* added bootstrap classes for nav-tabs
* fixed active class position
* fixes a outdated class name in sass styles
* fixes blank xsl attribute, wrong order

--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/forms.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/forms.scss
@@ -17,10 +17,6 @@
   top: 0;
 }
 
-*:not(.input-group-btn)/*:not(.btn-group)*/ > .btn {
-  margin-right: 5px;
-}
-
 .form-pmud .btn {
 //deprecated
   margin-right: 2px;
@@ -191,7 +187,7 @@ span.topicExtended-container input.topic_gnd, span.geographicExtended-container 
 /* mir relatedItemsearch                           */
 /***************************************************/
 .mir-relatedItem-body{
-  margin-top:15px;
+  padding-top:15px;
   border-style: solid;
   border-width: 0px 0px 0px 2px;
   border-color: #ccc;
@@ -199,7 +195,7 @@ span.topicExtended-container input.topic_gnd, span.geographicExtended-container 
 }
 
 .mir-relatedItem-head{
-  margin-bottom: 15px;
+  margin-bottom: 0;
   border-style: solid;
   border-width: 2px 2px 2px 2px;
   border-color: #ccc;
