--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/mir_metadata.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/mir_metadata.scss
@@ -141,7 +141,7 @@ $grayDark: #ECF0F1 !default;
     span {
       cursor: pointer;
     }
-    span.fa {
+    span.fas {
       color: #ccc;
       margin-right: 0.5em;
     }
